--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -3,7 +3,6 @@ bumpversion==0.5.3
 wheel==0.32.1
 watchdog==0.9.0
 flake8==3.5.0
-tox==3.5.2
 coverage==4.5.1
 Sphinx==1.8.1
 twine==1.12.1
@@ -16,4 +15,5 @@ pandas==0.23.4
 scikit-learn==0.20.0
 scipy==1.1.0
 Click==7.0
-daiquiri
+daiquiri==1.5.0
+tox==3.5.3
